Fix profile startup failure when non-ASCII characters are in the profile path name (bug 324311).  Thanks to Nickolay Ponomarev <asqueella@gmail.com> for the patch; r=bryner, a181=bryner.