storage/src/mozStorageConnection.cpp
@@ -97,11 +97,11 @@ mozStorageConnection::Initialize(nsIFile *aDatabaseFile)
     mDatabaseFile = aDatabaseFile;
 
     if (aDatabaseFile) {
-        nsCAutoString nativePath;
-        rv = aDatabaseFile->GetNativePath(nativePath);
+        nsAutoString path;
+        rv = aDatabaseFile->GetPath(path);
         NS_ENSURE_SUCCESS(rv, rv);
 
-        srv = sqlite3_open (nativePath.get(), &mDBConn);
+        srv = sqlite3_open16 (path.get(), &mDBConn);
     } else {
         // in memory database requested, sqlite uses a magic file name
         srv = sqlite3_open (":memory:", &mDBConn);
